Close file descriptors when [n]>&- and [n]<&- redirections are used. This was broken by rev. 1.16.

PR:		40334
MFC after:	1 week

Former-commit-id: 947727511a5ed266582ed416a33e836cccf897d4